--- a/employee-service-consumer/pom.xml
+++ b/employee-service-consumer/pom.xml
@@ -20,8 +20,8 @@
 
   <properties>
     <java.version>17</java.version>
+    <common-dto.version>0.0.1-SNAPSHOT</common-dto.version>
     <springdoc.version>2.5.0</springdoc.version>
-    <common.codec.version>1.15</common.codec.version>
     <validation.api.version>2.0.1.Final</validation.api.version>
     <maven.checkstyle.version>3.2.2</maven.checkstyle.version>
     <puppycrawl.version>10.11.0</puppycrawl.version>
@@ -51,14 +51,9 @@
       <version>${springdoc.version}</version>
     </dependency>
     <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>${common.codec.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-validator</artifactId>
-      <version>8.0.0.Final</version>
+      <groupId>com.employee</groupId>
+      <artifactId>common-dto</artifactId>
+      <version>${common-dto.version}</version>
     </dependency>
 
     <!-- persistence -->
