--- a/employee-service/pom.xml
+++ b/employee-service/pom.xml
@@ -20,8 +20,8 @@
 
   <properties>
     <java.version>17</java.version>
+    <common-dto.version>0.0.1-SNAPSHOT</common-dto.version>
     <springdoc.version>2.5.0</springdoc.version>
-    <common.codec.version>1.15</common.codec.version>
     <validation.api.version>2.0.1.Final</validation.api.version>
     <maven.checkstyle.version>3.2.2</maven.checkstyle.version>
     <puppycrawl.version>10.11.0</puppycrawl.version>
@@ -29,6 +29,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.employee</groupId>
+      <artifactId>common-dto</artifactId>
+      <version>${common-dto.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -49,16 +54,6 @@
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       <version>${springdoc.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>${common.codec.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-validator</artifactId>
-      <version>8.0.0.Final</version>
     </dependency>
 
     <!-- persistence -->
