--- a/docker/keycloak-compose.yml
+++ b/docker/keycloak-compose.yml
@@ -29,24 +29,26 @@ services:
       timeout: 10s
     depends_on:
       - keycloak-x
-    employee-service-consumer:
-      build:
-        context: ../employee-service-consumer/
-        dockerfile: Dockerfile
-      restart: unless-stopped
-      ports:
-        - "8080:8080"
-      environment:
-        - "JAVA_OPTS=${JAVA_ARGS} -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
-        - "SPRING_PROFILES_ACTIVE=docker"
-      healthcheck:
-        test: curl --fail http://localhost:8080/actuator/health || exit 1
-        interval: 5s
-        retries: 15
-        start_period: 20s
-        timeout: 10s
-      depends_on:
-        - keycloak-x
+      - kafka
+  employee-service-consumer:
+    build:
+      context: ../employee-service-consumer/
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    ports:
+      - "8081:8080"
+    environment:
+      - "JAVA_OPTS=${JAVA_ARGS} -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
+      - "SPRING_PROFILES_ACTIVE=docker"
+    healthcheck:
+      test: curl --fail http://localhost:8080/actuator/health || exit 1
+      interval: 5s
+      retries: 15
+      start_period: 20s
+      timeout: 10s
+    depends_on:
+      - keycloak-x
+      - kafka
   keycloak-x-pg:
     container_name: ws-keycloak-x-pg
     image: docker.io/bitnami/postgresql:${KEYCLOAK_POSTGRES_VERSION}
@@ -90,3 +92,22 @@ services:
       - ./keycloak/export:/export
     depends_on:
       - keycloak-x-pg
+  zookeeper:
+    image: wurstmeister/zookeeper
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9093
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: "employee-upsert.v1:1:1,employee-deletion.v1:1:1"
