--- a/employee-service/pom.xml
+++ b/employee-service/pom.xml
@@ -22,6 +22,8 @@
     <java.version>17</java.version>
     <common-dto.version>0.0.1-SNAPSHOT</common-dto.version>
     <springdoc.version>2.5.0</springdoc.version>
+    <spring-kafka.version>3.1.4</spring-kafka.version>
+    <openfeing.version>13.2.1</openfeing.version>
     <validation.api.version>2.0.1.Final</validation.api.version>
     <maven.checkstyle.version>3.2.2</maven.checkstyle.version>
     <puppycrawl.version>10.11.0</puppycrawl.version>
@@ -51,20 +53,28 @@
       <artifactId>spring-boot-starter-oauth2-client</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+      <version>${spring-kafka.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       <version>${springdoc.version}</version>
     </dependency>
-
-    <!-- persistence -->
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <groupId>io.github.openfeign</groupId>
+      <artifactId>feign-core</artifactId>
+      <version>${openfeing.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <scope>runtime</scope>
+      <groupId>io.github.openfeign</groupId>
+      <artifactId>feign-jackson</artifactId>
+      <version>${openfeing.version}</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -77,6 +87,12 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka-test</artifactId>
+      <version>${spring-kafka.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
