--- a/employee-service/src/main/resources/application.yml
+++ b/employee-service/src/main/resources/application.yml
@@ -34,3 +34,13 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8081/realms/dev
+
+services:
+  employee-service-consumer:
+    base-url: http://localhost:8081
+
+kafka:
+  producer:
+    bootstrap-address: localhost:9092
+    employee-upsert-topic: employee-upsert.v1
+    employee-deletion-topic: employee-deletion.v1
