--- a/employee-service/pom.xml
+++ b/employee-service/pom.xml
@@ -4,37 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.2.5</version>
-    <relativePath />
+    <artifactId>employee-service-parent</artifactId>
+    <groupId>com.employeecrud</groupId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>..</relativePath>
   </parent>
 
-  <artifactId>employee-service</artifactId>
   <groupId>com.employeecrud</groupId>
+  <artifactId>employee-service</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
 
   <name>Employee Service</name>
   <description>Deployable artifact of Employee Service</description>
 
-  <properties>
-    <java.version>17</java.version>
-    <common-dto.version>0.0.1-SNAPSHOT</common-dto.version>
-    <springdoc.version>2.5.0</springdoc.version>
-    <spring-kafka.version>3.1.4</spring-kafka.version>
-    <openfeing.version>13.2.1</openfeing.version>
-    <validation.api.version>2.0.1.Final</validation.api.version>
-    <maven.checkstyle.version>3.2.2</maven.checkstyle.version>
-    <puppycrawl.version>10.11.0</puppycrawl.version>
-    <maven-versions-plugin.version>2.13.0</maven-versions-plugin.version>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>com.employee</groupId>
-      <artifactId>common-dto</artifactId>
-      <version>${common-dto.version}</version>
+      <artifactId>employee-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -59,22 +46,18 @@
     <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka</artifactId>
-      <version>${spring-kafka.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-      <version>${springdoc.version}</version>
     </dependency>
     <dependency>
       <groupId>io.github.openfeign</groupId>
       <artifactId>feign-core</artifactId>
-      <version>${openfeing.version}</version>
     </dependency>
     <dependency>
       <groupId>io.github.openfeign</groupId>
       <artifactId>feign-jackson</artifactId>
-      <version>${openfeing.version}</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -92,7 +75,6 @@
     <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka-test</artifactId>
-      <version>${spring-kafka.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -113,80 +95,6 @@
             <goals>
               <goal>build-info</goal>
             </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>${maven.checkstyle.version}</version>
-        <dependencies>
-          <dependency>
-            <groupId>com.puppycrawl.tools</groupId>
-            <artifactId>checkstyle</artifactId>
-            <version>${puppycrawl.version}</version>
-          </dependency>
-        </dependencies>
-        <configuration>
-          <configLocation>file://${project.basedir}/checkstyle.xml</configLocation>
-          <consoleOutput>true</consoleOutput>
-          <sourceDirectories>
-            <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
-            <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
-          </sourceDirectories>
-        </configuration>
-        <executions>
-          <execution>
-            <id>check</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>checkstyle</id>
-            <phase>compile</phase>
-            <goals>
-              <goal>checkstyle</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>versions-maven-plugin</artifactId>
-        <version>${maven-versions-plugin.version}</version>
-        <inherited>false</inherited>
-        <configuration>
-          <rulesUri>file://${project.basedir}/version-number-rules.xml</rulesUri>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>${maven-enforcer-plugin.version}</version>
-        <executions>
-          <execution>
-            <id>enforce-versions</id>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <dependencyConvergence/>
-                <requireMavenVersion>
-                  <version>[3.3,)</version>
-                </requireMavenVersion>
-                <requireJavaVersion>
-                  <version>[1.17,)</version>
-                </requireJavaVersion>
-                <requireReleaseDeps>
-                  <message>No Snapshots Allowed in Release Version!</message>
-                  <onlyWhenRelease>true</onlyWhenRelease>
-                  <failWhenParentIsSnapshot>true</failWhenParentIsSnapshot>
-                </requireReleaseDeps>
-              </rules>
-            </configuration>
           </execution>
         </executions>
       </plugin>
