--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <springboot.version>3.2.5</springboot.version>
         <springdoc.version>2.5.0</springdoc.version>
         <spring-kafka.version>3.1.4</spring-kafka.version>
         <openfeing.version>13.2.1</openfeing.version>
@@ -34,6 +35,8 @@
         <maven-versions-plugin.version>2.16.2</maven-versions-plugin.version>
         <common.codec.version>1.16.1</common.codec.version>
         <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
+        <assertj-assertions-generator.version>2.2.1</assertj-assertions-generator.version>
+        <assertj-assertions-generator-maven-plugin.version>2.2.0</assertj-assertions-generator-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -46,27 +49,32 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${springboot.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-actuator</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${springboot.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${springboot.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-oauth2-client</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${springboot.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-validation</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${springboot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>1.3.2</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.kafka</groupId>
@@ -96,7 +104,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${springboot.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
@@ -106,7 +114,7 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-test</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${springboot.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -122,6 +130,36 @@
         <finalName>${project.artifactId}</finalName>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.assertj</groupId>
+                    <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
+                    <version>${assertj-assertions-generator-maven-plugin.version}</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.assertj</groupId>
+                            <artifactId>assertj-core</artifactId>
+                            <version>[3.15.0,3.99.0]</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.assertj</groupId>
+                            <artifactId>assertj-assertions-generator</artifactId>
+                            <version>${assertj-assertions-generator.version}</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>${maven-source-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
