--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <springboot.version>3.2.5</springboot.version>
+        <spring-security.version>6.2.4</spring-security.version>
         <springdoc.version>2.5.0</springdoc.version>
         <spring-kafka.version>3.1.4</spring-kafka.version>
         <openfeing.version>13.2.1</openfeing.version>
@@ -114,7 +115,7 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-test</artifactId>
-                <version>${springboot.version}</version>
+                <version>${spring-security.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
