fix unit tests and rename kafka property

--- a/employee-service-consumer/src/test/resources/application-test.yml
+++ b/employee-service-consumer/src/test/resources/application-test.yml
@@ -10,3 +10,7 @@ spring:
         jwt:
           # issuer-uri: false
           issuer-uri: http://localhost:8081/realms/dev
+
+kafka:
+  consumer:
+    enabled: false
