rename apps and update http request files

--- a/employee-service-consumer/pom.xml
+++ b/employee-service-consumer/pom.xml
@@ -93,7 +93,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <executable>true</executable>
-          <mainClass>com.employee.EmployeeCrudApplication</mainClass>
+          <mainClass>com.employee.EmployeeConsumerServiceApplication</mainClass>
         </configuration>
         <executions>
           <execution>
