--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.5</version>
+        <version>3.4.4</version>
         <relativePath />
     </parent>
     <modules>
@@ -24,18 +24,19 @@
         <java.version>21</java.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <springboot.version>3.2.5</springboot.version>
-        <spring-security.version>6.2.4</spring-security.version>
-        <springdoc.version>2.5.0</springdoc.version>
-        <spring-kafka.version>3.1.4</spring-kafka.version>
-        <openfeing.version>13.2.1</openfeing.version>
-        <lombok.version>1.18.32</lombok.version>
+        <springboot.version>3.4.4</springboot.version>
+        <spring-security.version>6.4.4</spring-security.version>
+        <springdoc.version>2.8.6</springdoc.version>
+        <spring-kafka.version>3.3.4</spring-kafka.version>
+        <openfeing.version>13.6</openfeing.version>
+        <lombok.version>1.18.38</lombok.version>
         <validation.api.version>2.0.1.Final</validation.api.version>
-        <maven.checkstyle.version>3.3.1</maven.checkstyle.version>
-        <puppycrawl.version>10.16.0</puppycrawl.version>
-        <maven-versions-plugin.version>2.16.2</maven-versions-plugin.version>
+        <maven.checkstyle.version>3.6.0</maven.checkstyle.version>
+<!--        <spotless.version>2.44.2</spotless.version>-->
+        <puppycrawl.version>10.23.0</puppycrawl.version>
+        <maven-versions-plugin.version>2.18.0</maven-versions-plugin.version>
         <common.codec.version>1.16.1</common.codec.version>
-        <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
+        <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
         <assertj-assertions-generator.version>2.2.1</assertj-assertions-generator.version>
         <assertj-assertions-generator-maven-plugin.version>2.2.0</assertj-assertions-generator-maven-plugin.version>
     </properties>
@@ -43,9 +44,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.employee</groupId>
+                <groupId>com.employeecrud</groupId>
                 <artifactId>employee-api</artifactId>
-                <version>${project.version}</version>
+                <version>0.0.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -161,6 +162,16 @@
                         </execution>
                     </executions>
                 </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>com.diffplug.spotless</groupId>-->
+<!--                    <artifactId>spotless-maven-plugin</artifactId>-->
+<!--                    <version>${spotless.version}</version>-->
+<!--                    <configuration>-->
+<!--                        <java>-->
+<!--                            <googleJavaFormat/>-->
+<!--                        </java>-->
+<!--                    </configuration>-->
+<!--                </plugin>                -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
@@ -173,7 +184,7 @@
                         </dependency>
                     </dependencies>
                     <configuration>
-                        <configLocation>file://${project.basedir}/checkstyle.xml</configLocation>
+                        <configLocation>file://${project.basedir}/../checkstyle.xml</configLocation>
                         <consoleOutput>true</consoleOutput>
                         <sourceDirectories>
                             <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
