--- a/employee-service-consumer/src/main/resources/application-docker.yml
+++ b/employee-service-consumer/src/main/resources/application-docker.yml
@@ -11,4 +11,10 @@ spring:
             issuer-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}
       resourceserver:
         jwt:
-          issuer-uri: http://keycloak-x:8080/realms/dev
+          issuer-uri: http://keycloak-x:8080/realms/master
+
+kafka:
+  producer:
+    bootstrap-servers: kafka:9092
+    employee-upsert-topic: employee-upsert.v1
+    employee-deletion-topic: employee-deletion.v1
