--- a/employee-service-consumer/pom.xml
+++ b/employee-service-consumer/pom.xml
@@ -10,7 +10,6 @@
     <relativePath>..</relativePath>
   </parent>
 
-  <groupId>com.employeecrud</groupId>
   <artifactId>employee-service-consumer</artifactId>
   <packaging>jar</packaging>
 
@@ -61,9 +60,8 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <scope>runtime</scope>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
