replace checkstyle by spotless

--- a/employee-service/pom.xml
+++ b/employee-service/pom.xml
@@ -81,6 +81,10 @@
     <finalName>EmployeeService</finalName>
     <plugins>
       <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
