--- a/employee-service-consumer/pom.xml
+++ b/employee-service-consumer/pom.xml
@@ -87,6 +87,10 @@
     <finalName>EmployeeServiceConsumer</finalName>
     <plugins>
       <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
