update deps and add local profiles

--- a/docker/keycloak-compose.yml
+++ b/docker/keycloak-compose.yml
@@ -55,22 +55,21 @@ services:
       - 27017:27017
   keycloak-x-pg:
     container_name: ws-keycloak-x-pg
-    image: docker.io/bitnami/postgresql:${KEYCLOAK_POSTGRES_VERSION}
+    image: docker.io/postgres:${KEYCLOAK_POSTGRES_VERSION}
     restart: unless-stopped
     ports:
       - 5432:5432
     environment:
-      POSTGRESQL_DATABASE: ${KEYCLOAK_POSTGRES_DATABASE}
-      POSTGRESQL_USERNAME: ${KEYCLOAK_POSTGRES_USER}
-      POSTGRESQL_PASSWORD: ${KEYCLOAK_POSTGRES_PASSWORD}
+      POSTGRES_DB: ${KEYCLOAK_POSTGRES_DATABASE}
+      POSTGRES_USER: ${KEYCLOAK_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${KEYCLOAK_POSTGRES_PASSWORD}
     volumes:
-      - keycloak-pg-data:/bitnami/postgresql
-      - keycloak-pg-preinitdb:/docker-entrypoint-preinitdb.d
-      - keycloak-pg-initdb:/docker-entrypoint-initdb.d
+      - keycloak-pg-data:/var/lib/postgresql
 
   keycloak-x:
     container_name: ws-keycloak-x
-    image: docker.io/bitnami/keycloak:${KEYCLOAK_VERSION}
+    image: docker.io/keycloak/keycloak:${KEYCLOAK_VERSION}
+    command: ["start-dev", "--import-realm", "--verbose"]
     restart: unless-stopped
     ports:
       - 8081:8080
@@ -81,19 +80,17 @@ services:
       start_period: 20s
       timeout: 3s
     environment:
-      KEYCLOAK_CREATE_ADMIN_USER: true
-      KEYCLOAK_ADMIN_USER: ${KEYCLOAK_USER}
-      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_PASSWORD}
-      KEYCLOAK_DATABASE_HOST: ws-keycloak-x-pg
-      KEYCLOAK_DATABASE_PORT: 5432
-      KEYCLOAK_DATABASE_NAME: ${KEYCLOAK_POSTGRES_DATABASE}
-      KEYCLOAK_DATABASE_USER: ${KEYCLOAK_POSTGRES_USER}
-      KEYCLOAK_DATABASE_PASSWORD: ${KEYCLOAK_POSTGRES_PASSWORD}
-    command: [ "/scripts/run_import.sh" ]
+      KC_BOOTSTRAP_ADMIN_USERNAME: ${KEYCLOAK_USER}
+      KC_BOOTSTRAP_ADMIN_PASSWORD: ${KEYCLOAK_PASSWORD}
+      KC_DB_URL: jdbc:postgresql://ws-keycloak-x-pg:5432/${KEYCLOAK_POSTGRES_DATABASE}
+      KC_DB: postgres
+      KC_DB_USERNAME: ${KEYCLOAK_POSTGRES_USER}
+      KC_DB_PASSWORD: ${KEYCLOAK_POSTGRES_PASSWORD}
+      KC_HOSTNAME: localhost
     volumes:
-      - ./keycloak/scripts:/scripts
-      - ./keycloak/import:/import
-      - ./keycloak/export:/export
+      - ./keycloak/import/dev-realm:/opt/keycloak/data/import
+#      - ./keycloak/import/master:/opt/keycloak/data/import
+#      - ./keycloak/export:/export
     depends_on:
       - keycloak-x-pg
   zookeeper:
