--- a/employee-service/src/main/resources/application.yml
+++ b/employee-service/src/main/resources/application.yml
@@ -11,6 +11,9 @@ logging:
 
 ####### resource server configuration properties
 spring:
+  threads:
+    virtual:
+      enabled: true
   jpa:
     defer-datasource-initialization: true
     show-sql: true
