fix module compilation issues

--- a/employee-service-consumer/pom.xml
+++ b/employee-service-consumer/pom.xml
@@ -48,6 +48,7 @@
     <dependency>
       <groupId>com.employeecrud</groupId>
       <artifactId>employee-api</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
