--- a/employee-service/pom.xml
+++ b/employee-service/pom.xml
@@ -20,6 +20,7 @@
     <dependency>
       <groupId>com.employeecrud</groupId>
       <artifactId>employee-api</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
